--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <h1>This is my portfolio</h1>
-    <h1> this is my paragraph</h1>
-    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, molestiae quia quo labore, quasi fugit est cupiditate deleniti ad ex amet beatae aliquam facere reprehenderit. Perspiciatis, consequatur. Ad, asperiores temporibus.</h2>  
+    <h1>this is my paragraph</h1>
+    <h3>Header</h3>
+    <h2>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, molestiae
+      quia quo labore, quasi fugit est cupiditate deleniti ad ex amet beatae
+      aliquam facere reprehenderit. Perspiciatis, consequatur. Ad, asperiores
+      temporibus.
+    </h2>
   </body>
 </html>
